# src/main/java/it/gov/pagopa/cgn/portal/controller/AgreementController.java
@@ -35,6 +35,11 @@ public class AgreementController implements AgreementsApi {
     }
 
     @Override
+    public ResponseEntity<Agreement> getAgreement() {
+        return agreementFacade.getAgreement(CGNUtils.getJwtOperatorUserId());
+    }
+
+    @Override
     public ResponseEntity<Void> requestApproval(String agreementId) {
         return agreementFacade.requestApproval(agreementId);
     }
